Improve breakpoint to avoid overlap between split components in medium viewports

--- a/media/css/pocket/components/updates-signup.scss
+++ b/media/css/pocket/components/updates-signup.scss
@@ -64,7 +64,7 @@
                 @include visually-hidden;
             }
 
-            @media (min-width: 870px) {
+            @media (min-width: 960px) {
                 flex-direction: row;
 
                 input[type="email"] {
